pt_p translation by BlackZon

--- a/addons/sourcemod/translations/gloves.phrases.txt
+++ b/addons/sourcemod/translations/gloves.phrases.txt
@@ -22,7 +22,7 @@
 	}
 	"ChooseLanguage"
 	{
-		"en"	"Select language for skin names:"
+		"en"	"Select language for glove names:"
 	}
 	"DefaultGloves"
 	{
